May 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/misc.c: Use const for input strings.
 * libpcsxcore/misc.h: Likewise.
 * libpcsxcore/spu.c: Got rid of 0x80000000 flag of psxRegs.interrupt.
 * libpcsxcore/psxinterpreter.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/r3000a.h: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/psxhw.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.

May 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.h: Added extern "C" to all headers.
 * libpcsxcore/misc.h: Likewise.
 * libpcsxcore/ppc/reguse.h: Likewise.
 * libpcsxcore/ppc/pGte.h: Likewise.
 * libpcsxcore/ppc/ppc.h: Likewise.
 * libpcsxcore/psxdma.h: Likewise.
 * libpcsxcore/psxcounters.h: Likewise.
 * libpcsxcore/cdrom.h: Likewise.
 * libpcsxcore/psxmem.h: Likewise.
 * libpcsxcore/decode_xa.h: Likewise.
 * libpcsxcore/coff.h: Likewise.
 * libpcsxcore/gte.h: Likewise.
 * libpcsxcore/ix86_64/iGte.h: Likewise.
 * libpcsxcore/cdriso.h: Likewise.
 * libpcsxcore/system.h: Likewise.
 * libpcsxcore/ppf.h: Likewise.
 * libpcsxcore/debug.h: Likewise.
 * libpcsxcore/psxbios.h: Likewise.
 * libpcsxcore/psxhle.h: Likewise.
 * libpcsxcore/r3000a.h: Likewise.
 * libpcsxcore/spu.h: Likewise.
 * libpcsxcore/psemu_plugin_defs.h: Likewise.
 * libpcsxcore/mdec.h: Likewise.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/ix86/iGte.h: Likewise.
 * libpcsxcore/psxhw.h: Likewise.
 * libpcsxcore/cheat.h: Likewise.
 * libpcsxcore/socket.h: Likewise.
 * libpcsxcore/r3000a.c: Separated cheat related stuff out of the r3000a code.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/psxcommon.h: Added EmuInit, EmuReset, EmuShutdown & EmuReset.
 * libpcsxcore/misc.c: Moved logging stuff to psxcommon.c.
 * libpcsxcore/psxcommon.c: Added EmuInit, EmuReset, EmuShutdown & EmuReset,